fixed some alignments

--- a/frontend/src/components/Buttons/CreateButton/CreateButton.css
+++ b/frontend/src/components/Buttons/CreateButton/CreateButton.css
@@ -1,6 +1,6 @@
 .create-button{
-    background-color: #5cbf9e;
-    color: white;
+    background-color: #6cc8a5;
+    color: black;
     border-radius: 2em;
     padding: 1.25em 2em;
     font-size: 0.9em;
