--- a/frontend/src/components/Buttons/RedirectButton/RedirectButton.css
+++ b/frontend/src/components/Buttons/RedirectButton/RedirectButton.css
@@ -1,11 +1,12 @@
 .redirect-button {
     background-color: var(--redirect-button-color);
     color: white;
-    padding: 0.9rem 1.5rem;
+    padding: 0.75rem 1.25rem;
     text-decoration: none;
     font-size: 0.85rem;
     border-radius: 2rem;
     /**/
+    align-self: stretch;
     display: flex;
     flex-direction: row;
     gap: 0.75rem;
