--- a/frontend/src/components/CardList/components/Cards/NoteCard/layouts/NoteHeaderLayout/NoteHeaderLayout.css
+++ b/frontend/src/components/CardList/components/Cards/NoteCard/layouts/NoteHeaderLayout/NoteHeaderLayout.css
@@ -9,6 +9,7 @@
 .note-card-title {
     display: flex;
     flex-direction: row;
+    gap: 0.25rem;
     overflow: hidden;
     font-size: 1.25em;
     flex-grow: 1;
@@ -24,7 +25,7 @@
 }
 
 .note-card-job-title{
-    width: 85%;
+    max-width: 85%;
     text-wrap: nowrap;
     white-space: nowrap;
     overflow: hidden;
