--- a/frontend/src/components/NotificationList/components/Notification/Notification.css
+++ b/frontend/src/components/NotificationList/components/Notification/Notification.css
@@ -16,6 +16,7 @@
 .notification-msg {
     font-size: 0.9rem;
     align-self: center;
+    text-transform: capitalize;
 }
 
 .notification-msg::first-letter {
